--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>agrinho 2024</title>
 </head>
 <body>
+
+<header class="cabecalho"></header>
+
+
+
+<main class="principal">
+
+
+
+
+<footer class="rodape">
+
     
 </body>
 </html>
