érçrpl;prlço4.lo

--- a/index.html
+++ b/index.html
@@ -6,12 +6,25 @@
     <link rel="stylesheet" href="style.css">
     <title>agrinho 2024</title>
 </head>
-<body>
+<body</head>
 
-<header class="cabecalho"></header>
+<header class="cabecalho">
+<img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg" alt="" class="cabecalho_imagem">
+<nav class="cabecalho_menu">
+<ul class="cabecalho_menulista">
+
+<li classe="cabecalho_menuitem">pagina 1</li>
+<li classe="cabecalho_menuitem">pagina 2</li>
+<li classe="cabecalho_menuitem">pagina 3</li>0
 
 
 
+
+</ul>
+
+
+</nav>
+</header>
 <main class="principal">
 
 
@@ -19,6 +32,17 @@
 
 <footer class="rodape">
 
-    
+
+</footer>
+   
+
+
+
+
+
+
+</body>
+
+
 </body>
 </html>
